mdapipkg/objects/Product_Image__c.object
<CustomObject>
    <description>Store for all product images</description>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(  Image_URL__c  , &apos;Preview&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <label>Integration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Alt_Tag__c</fullName>
        <label>Product Alt Tag</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_Description__c</fullName>
        <label>Product Image Description</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Product Image External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Images</relationshipLabel>
        <relationshipName>Product_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Variant_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Variant</label>
        <referenceTo>Product_Variant__c</referenceTo>
        <relationshipLabel>Product Images</relationshipLabel>
        <relationshipName>Product_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Variant_Image_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Variant Image External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Image</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>